add required html authentication

--- a/templates/show_entries.html
+++ b/templates/show_entries.html
@@ -5,9 +5,9 @@
       method=post class=add-entry>
         <dl>
             <dt>Title</dt>
-            <dd><input type=text size=30 name=title /></dd>
+            <dd><input type=text size=30 name=title required/></dd>
             <dt>Text</dt>
-            <dd><textarea name=text row=5 cols=40></textarea></dd>
+            <dd><textarea name=text row=5 cols=40 required></textarea></dd>
             <dd><input type=submit value=Share></dd>
         </dl>
     </form>
